--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
+    "babel": "^6.23.0",
     "clsx": "^1.2.0",
     "devicon": "^2.15.1",
     "fast-glob": "^3.2.11",
