--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
