--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "^1.7.0",
-    "@mapbox/rehype-prism": "^0.7.0",
-    "@mdx-js/loader": "^2.3.0",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.3",
-    "@next/mdx": "^13.1.0",
+    "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
@@ -32,9 +32,6 @@
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
